# smhi-mcp

./: .gitignore  .mcp-example.json  CHANGELOG.md  LICENSE  PUSH_TO_GITHUB.md  README.md  pyproject.toml  requirements.txt  server.py  smhi_weather_mcp.py
