[project]
name = "smhi-weather-mcp"
version = "1.0.0"
description = "MCP server providing SMHI weather forecasts for daily planning in Sweden"
authors = [
    {name = "Oliver Glant", email = "oliver.glant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "weather", "smhi", "sweden", "forecast", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/Leopaexd/smhi-weather-mcp"
Repository = "https://github.com/Leopaexd/smhi-weather-mcp"
Issues = "https://github.com/Leopaexd/smhi-weather-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
